--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,4 +7,10 @@
 @import "blocks/button";
 @import "blocks/page-main";
 @import "blocks/subscription";
+@import "blocks/last-news";
+@import "blocks/mobile-app";
+@import "blocks/popular-tracks";
+@import "blocks/discography";
+@import "blocks/similar-artists";
+@import "blocks/sticky-footer";
 @import "blocks/page-footer";
