--- a/src/scss/blocks/page-footer.scss
+++ b/src/scss/blocks/page-footer.scss
@@ -1,12 +1,164 @@
 .page-footer {
+    grid-area: footer;
+    padding-top: 62px;
+    padding-bottom: 48px;
     background: linear-gradient(265.08deg, #95390C 14.9%, #5328A1 68.95%);
 }
 
-.page-footer__container {
+.page-footer__top {
+    padding-bottom: 75px;
+    border-bottom: 1px solid $gray;
+
+    @media (min-width: $desktop-width) {
+        padding-bottom: 72px;
+    }
+}
+
+.page-footer__top-container,
+.page-footer__bottom-container {
     padding: 0 20px;
     
     @media (min-width: $desktop-width) {
         width: 1200px;
         margin: 0 auto;
+        padding: 0;
+    }
+}
+
+.page-footer__top-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 247px);
+    row-gap: 30px;
+
+    @media (min-width: 530px) {
+        column-gap: 70px;
+        row-gap: 50px;
+    }
+}
+
+.page-footer__top-about-us-title,
+.page-footer__top-support-title,
+.page-footer__top-contacts-title,
+.page-footer__top-subscribe-title {
+    margin-bottom: 16px;
+    color: $white;
+    line-height: 27px;
+    text-transform: uppercase;
+
+    @media (min-width: $desktop-width) {
+        margin-bottom: 15px;
+    }
+}
+
+.page-footer__top-about-us-list,
+.page-footer__top-support-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+}
+
+.page-footer__top-about-us-item-link,
+.page-footer__top-support-item-link {
+    color: $gray;
+    text-decoration: none;
+    transition: 0.4s;
+
+    &:hover {
+        color: darken($color: $gray, $amount: 20%);
+    }
+}
+
+.page-footer__top-contacts-email,
+.page-footer__top-contacts-address,
+.page-footer__top-contacts-phone-number {
+    display: block;
+    color: $gray;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    text-decoration: none;
+    transition: 0.4s;
+
+    &:hover {
+        color: darken($color: $gray, $amount: 20%);
+    }
+}
+
+.page-footer__top-subscribe-links-wrapper {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    justify-content: start;
+    align-items: center;
+    column-gap: 24px;
+}
+
+.page-footer__top-subscribe-link {
+    font-size: 0;
+    background-image: url("../images/png-sprite.png");
+    background-repeat: no-repeat;
+}
+
+.page-footer__top-subscribe-link--google-plus {
+    width: 26px;
+    height: 17px;
+    background-position: -123px -10px;
+}
+
+.page-footer__top-subscribe-link--twitter {
+    width: 22px;
+    height: 19px;
+    background-position: -81px -10px;
+}
+
+.page-footer__top-subscribe-link--facebook {
+    width: 12px;
+    height: 20px;
+    background-position: -10px -10px;
+}
+
+.page-footer__top-subscribe-link--instagram {
+    width: 19px;
+    height: 20px;
+    background-position: -42px -10px;
+}
+
+.page-footer__bottom-container {
+    padding-top: 40px;
+}
+
+.page-footer__bottom-nav {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+
+    @media (min-width: 520px) {
+        display: grid;
+        grid-template-columns: repeat(5, auto);
+        column-gap: 16px;
+        justify-content: start;
+    }
+}
+
+.page-footer__bottom-nav-item {
+    margin-bottom: 16px;
+
+    @media (min-width: 520px) {
+        margin-bottom: 0;
+    }
+}
+
+.page-footer__bottom-nav-item-link {
+    color: $gray;
+    text-decoration: none;
+    transition: 0.4s;
+
+    &:hover {
+        color: darken($color: $gray, $amount: 20%);
     }
 }
