--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -1,3 +1,7 @@
+.page-header {
+    grid-area: header;
+}
+
 .page-header__container {
     position: relative;
     margin: 0 20px;
@@ -13,18 +17,31 @@
     top: 27px;
     width: 100%;
 
-    @media (min-width: $desktop-width) {
-        top: 25px;
+    @media (min-width: 630px) {
         display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (min-width: 850px) {
+        top: 25px;
+        grid-template-columns: auto 1fr 220px;
+        column-gap: 90px;
+    }
+
+    @media (min-width: $desktop-width) {
         grid-template-columns: auto 1fr 248px;
-        grid-column-gap: 90px;
     }
 }
 
 .page-header__logo {
     margin-bottom: 17px;
 
-    @media (min-width: $desktop-width) {
+    @media (min-width: 630px) {
+        grid-column: span 3 / auto;
+    }
+
+    @media (min-width: 850px) {
+        grid-column: auto;
         margin-bottom: 0;
     }
 }
@@ -34,8 +51,13 @@
     font-size: 11px;
     line-height: 13px;
 
-    @media (min-width: $desktop-width) {
+    @media (min-width: 630px) {
+        grid-column: span 2 / auto;
         margin-bottom: 0;
+    }
+
+    @media (min-width: 850px) {
+        grid-column: auto;
     }
 }
 
@@ -44,20 +66,28 @@
     padding: 0;
     list-style: none;
 
-    @media (min-width: $desktop-width) {
+    @media (min-width: 630px) {
         position: relative;
         top: 50%;
-        transform: translateY(-50%);
         display: inline-grid;
         grid-template-columns: repeat(4, auto);
-        grid-column-gap: 24px;
+        column-gap: 24px;
+        transform: translateY(-50%);
+    }
+
+    @media (min-width: 740px) {
+        column-gap: 30px;
+    }
+
+    @media (min-width: 850px) {
+        column-gap: 24px;
     }
 }
 
 .page-header__nav-item {
     margin-bottom: 3px;
 
-    @media (min-width: $desktop-width) {
+    @media (min-width: 630px) {
         margin-bottom: 0;
     }
 }
@@ -86,16 +116,10 @@
     }
 }
 
-.page-header__search {
-    @media (min-width: $desktop-width) {
-        width: 248px;
-    }
-}
-
 .page-header__search-input {
     display: block;
     width: 100%;
-    max-width: 375px;
+    max-width: 280px;
     padding: 5px 10px;
     color: $white;
     font-weight: 400;
