--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -69,3 +69,11 @@ h4 {
         font-weight: 700;
     }
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    clip: rect(0 0 0 0);
+}
