--- a/src/scss/blocks/subscription.scss
+++ b/src/scss/blocks/subscription.scss
@@ -101,6 +101,7 @@
     z-index: 200;
     padding-bottom: 200px;
     color: $white;
+    font-weight: 400;
     text-align: center;
 
     @media (min-width: $desktop-width) {
