--- a/src/scss/blocks/last-news.scss
+++ b/src/scss/blocks/last-news.scss
@@ -84,7 +84,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    text-transform: none;
+    text-transform: capitalize;
 
     @media (min-width: $desktop-width) {
         margin-bottom: 30px;
